# named-semaphore

./: Cargo.toml  README.md
.github/workflows/: ci.yml
preempt-do/: Cargo.toml
preempt-do/src/: main.rs
src/: error.rs  lib.rs  unix.rs  windows.rs
