[package]
name = "named-semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
# Used for commandline
clap = { version = "4", features = ["derive"], optional = true }
# Used for commandline
anyhow = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System", "Win32_System_Threading"] }

[features]
commandline = ["clap", "anyhow"]

[[bin]]
name = "preempt-do"
required-features = ["commandline"]
