[package]
name = "named-semaphore"
version = "0.1.0"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Named semaphore for Linux & Windows."
homepage = "https://github.com/Evian-Zhang/named-semaphore"
documentation = "https://docs.rs/named-semaphore"
repository = "https://github.com/Evian-Zhang/named-semaphore"
readme = "README.md"
keywords = ["semaphore", "sem", "sem_open", "CreateSemaphore"]
categories = ["os"]

[dependencies]
thiserror = "1"
# Used for commandline
clap = { version = "4", features = ["derive"], optional = true }
# Used for commandline
anyhow = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System", "Win32_System_Threading"] }

[features]
commandline = ["clap", "anyhow"]

[[bin]]
name = "preempt-do"
required-features = ["commandline"]
